HREPTWO-979 fixed and added scrollbars to dashboard
svn path=/hippo-ecm/trunk/; revision=11909

--- a/cms/package/skin/src/main/webapp/style.css
+++ b/cms/package/skin/src/main/webapp/style.css
@@ -75,17 +75,20 @@ div.domainsico div ul li.icolistsmall { background-image: url("images/domain_ico
 
 
 #left{width: 222px; float: left; min-height: 506px; max-height: 506px; }
-#lefthalf{width: 504px; float: left; min-height: 506px; max-height: 506px;}
-#righthalf{width: 504px; float: right; min-height: 506px; max-height: 506px;}
+#lefthalf{width: 504px; float: left; min-height: 506px; max-height: 506px; overflow: auto;}
+#righthalf{width: 504px; float: right; min-height: 506px; max-height: 506px; overflow: auto}
 
 #right{width: 222px; float: right; min-height: 506px; max-height: 506px; overflow: auto}
 #center{margin-left: 228px; margin-right: 228px; min-height: 506px; position: relative;}
 #wideright{width: 787px; height: 351px; float: right; min-height: 506px; background: #f2f2f2;}
 #wideleft{width: 787px; height: 351px; float: left; min-height: 506px; background: #f2f2f2;}
 
-span.fauxbutton span{background: url("images/fauxbutton.gif") center center; display: block; width: 100px; height: 18px; text-align: center; padding-top: 3px; color: black; margin-bottom: 5px; margin-left: 5px;}
+.fauxbutton span{background: url("images/fauxbutton.gif") center center; display: block; width: 100px; height: 18px; text-align: center; padding-top: 3px; color: black; margin-bottom: 5px; margin-left: 5px;
+cursor:pointer;
+cursor:hand;
+ }
+.fauxbutton a{background: url("images/fauxbutton.gif") center center; display: block; width: 100px; height: 18px; text-align: center; padding-top: 3px; color: black; margin-bottom: 5px; margin-left: 5px;}
 span.fauxbutton input {width: 140px; border:1px solid #000; margin: 5px; margin-top:3px;}
-
 .scrolllist{overflow: auto; height: 80px; padding: 2px; background-color: white}
 
 .panelhead{background: #f2f2f2; width: 100%; height: 70px;}
@@ -210,12 +213,13 @@ background:none repeat scroll 0%;
 display:block;
 float:right;
 position:absolute;
-right: -278px;
-top:78px;
-width:20%;
+float:right;
+right:0px;
+top:117px;
 }
-span.templateactions ul{padding: 15px;}
+span.templateactions ul{padding: 12px;}
 div.templateeditor h3{font-size: 14px;}
+
 div.fields div div div div div div{border-bottom: 1px dotted #f1f1f1}
 .templateeditor{
 margin:5px;
@@ -406,13 +410,13 @@ div.templatetitle h4, div.usertitle h4{font-size: 12px; color: #666666; font-wei
 .templatedetails div.fields input{width: 120px;} 
 
 
-.templatedetails .templateactions {
+.templatedetails div.templateactions {
 position: absolute;
 right:26px;
 top:58px;
 }
 
-.templateactions {
+div.templateactions {
   width:240px;
 }
 
